--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -504,6 +504,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 35%;
 }
 
 .status-content {
@@ -575,13 +576,19 @@ main {
   border-radius: var(--border-radius);
   width: 60%;
   position: relative;
-  background-image: url(https://images.unsplash.com/photo-1502823403499-6ccfcf4fb453?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cHJvZmlsZSUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60);
   background-position: center;
   background-size: cover;
 }
 
+.display-status img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: var(--border-radius);
+}
+
 .content {
-  width: 50%;
+  width: 55%;
   /* background-color: red; */
   background: var(--primary);
   display: flex;
@@ -596,7 +603,7 @@ main {
 
 .progress {
   height: 5px;
-  width: 48%;
+  width: 53%;
   background-color: white;
   position: absolute;
   top: 2%;
@@ -608,7 +615,7 @@ main {
 .progress-inner {
   position: relative;
   height: 100%;
-  width: 10%;
+  width: 20%;
   background-color: black;
 }
 
@@ -654,7 +661,7 @@ main {
   justify-content: center;
   border-radius: 50%;
   position: absolute;
-  right: -6%;
+  right: -7%;
   top: 0%;
   z-index: 999;
 }
